--- a/src/RidingAnywhere-client/css/DatePicker.css
+++ b/src/RidingAnywhere-client/css/DatePicker.css
@@ -1,10 +1,8 @@
 .DatePicker{
-    width: 130px;
-    height: 40px;
     border: 2px solid orange;
     border-radius: 10px;
     text-align: center;
-    font-size: 13px;
+    font-size: medium;
     font-weight: bolder;
     cursor: pointer;
 }
