--- a/src/RidingAnywhere-client/css/crewBoardDetail.css
+++ b/src/RidingAnywhere-client/css/crewBoardDetail.css
@@ -138,6 +138,7 @@
     width: 100%;
     align-items: center;
     justify-content: space-between;
+    gap: 10px;
 }
 
 /* 크루 게시글 타이틀 및 타입 */
@@ -147,8 +148,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 300px;
-    min-width: 300px;
+    width: 250px;
+    min-width: 250px;
     height: 100%;
 }
 
@@ -158,11 +159,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 980px;
+    width: 100%;
+    max-width: 860px;
     height: 100%;
     border: 2px solid orange;
     border-radius: 20px;
+    padding: 5px;
     gap: 5px;
+    box-sizing: border-box;
 }
 
 /* 크루 게시글 정보 라인 */
@@ -173,7 +177,6 @@
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
-    padding: 10px;
 }
 
 /* 크루 게시글 작성자 */
@@ -213,6 +216,7 @@
     align-items: center;
     justify-content: right;
     width: max-content;
+    height: 100%;
     gap: 10px;
 }
 
@@ -238,11 +242,26 @@
     border: 2px solid orange;
 }
 
-.CrewBoardDate_ChangeLine>.DatePicker{
-    width: 140px;
-    min-width: 140px;
+.CrewBoardDate_ChangeLine>.CrewBoardDate_InputBoxLine{
+    display: flex;
+    flex-direction: column;
+    width: max-content;
+    height: 100%;
+    gap: 5px;
 }
 
+.CrewBoardDate_ChangeLine>.CrewBoardDate_InputBoxLine>div{
+    display: flex;
+    width: max-content;
+    align-items: center;
+    height: 50%;
+    gap: 5px;
+    .DatePicker{
+        width: 130px;
+        min-width: 130px;
+        height: 100%;
+    }
+}
 .CrewBoardDetail_Date_SettingBtn>.CrewBoardDetail_SettingBtnLine{
     display: flex;
     justify-content: center;
