2024, 11. 13 🛠️ 크루 보드 디테일 페이지 데이트픽커 🚧

--- a/src/RidingAnywhere-client/css/DatePicker.css
+++ b/src/RidingAnywhere-client/css/DatePicker.css
@@ -5,4 +5,8 @@
     font-size: medium;
     font-weight: bolder;
     cursor: pointer;
+    width: 200px;
+    min-width: 200px;
+    height: 100%;
+    box-sizing: border-box;
 }
