--- a/src/RidingAnywhere-client/css/DatePicker.css
+++ b/src/RidingAnywhere-client/css/DatePicker.css
@@ -1,12 +1,28 @@
 .DatePicker{
     border: 2px solid orange;
-    border-radius: 10px;
+    border-radius: 5px;
     text-align: center;
     font-size: medium;
     font-weight: bolder;
     cursor: pointer;
-    width: 200px;
-    min-width: 200px;
+    width: 180px;
+    min-width: 180px;
     height: 100%;
     box-sizing: border-box;
+}
+
+.DatePicker::-webkit-input-placeholder {
+    font-size: medium;
+}
+
+.DatePicker::-moz-placeholder {
+    font-size: medium;
+}
+
+.DatePicker:-ms-input-placeholder {
+    font-size: medium;
+}
+
+.DatePicker::-ms-input-placeholder {
+    font-size: medium;
 }
