2024, 11. 13 🛠️ 크루 보드 디테일 페이지 CSS 작업 🚧
🛠️ 크루 보드 디테일 페이지 상단 CSS 코드 수정 🚧

--- a/src/RidingAnywhere-client/css/crewBoardDetail.css
+++ b/src/RidingAnywhere-client/css/crewBoardDetail.css
@@ -260,7 +260,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 5px;
 }
 
 .CrewBoardDetail_SettingBtnLine>input{
@@ -319,6 +318,7 @@
 .CrewBoardDetail_InfoLine>.CrewBoardDetail_AddressLine{
     display: none;
     flex-direction: column;
+    justify-content: center;
     width: 420px;
     height: 100%;
     gap: 5px;
@@ -860,5 +860,15 @@
                     }
             }
         }
+    }
+}
+
+@media(max-width:1170px){
+    .CrewBoardDetail>.CrewBoardDetail_TopLine{
+        justify-content: center;
+    }
+
+    .CrewBoardDetail_TopLine>.CrewBoardDetail_Title{
+        display: none;
     }
 }
