--- a/src/RidingAnywhere-client/css/crewBoardDetail.css
+++ b/src/RidingAnywhere-client/css/crewBoardDetail.css
@@ -134,7 +134,7 @@
 
 .CrewBoardDetail>.CrewBoardDetail_TopLine{
     display: flex;
-    height: 180px;
+    height: max-content;
     width: 100%;
     align-items: center;
     justify-content: space-between;
@@ -150,7 +150,8 @@
     text-align: center;
     width: 250px;
     min-width: 250px;
-    height: 100%;
+    height: 180px;
+    min-height: 180px;
 }
 
 /* 크루 게시글 정보 영역 */
@@ -173,7 +174,7 @@
 .CrewBoardDetail_Info>.CrewBoardDetail_InfoLine{
     display: flex;
     width: 100%;
-    height: 50%;
+    height: max-content;
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
@@ -185,7 +186,18 @@
     width: max-content;
     align-items: center;
     height: 70px;
+    min-height: 70px;
     gap: 10px;
+}
+
+.CrewBoardDetail_Writer>.WriterName{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: max-content;
+    max-width: 220px;
+    min-width: 160px;
+    height: 100%;
 }
 
 /* 작성자 등급 */
@@ -194,11 +206,19 @@
     justify-content: center;
     align-items: center;
     width: 90px;
+    min-width: 90px;
     height: 50px;
+    min-height: 50px;
     border: 2px solid orange;
     border-radius: 10px;
     box-sizing: border-box;
     margin: 0;
+}
+
+.CrewBoardDetail_Writer>.CrewBoardDetail_SettingBtnLine{
+    display: none;
+    align-items: center;
+    justify-content: center;
 }
 
 /* 크루 게시글 지정 날짜 및 설정 버튼 */
@@ -206,9 +226,18 @@
     display: flex;
     align-items: center;
     width: max-content;
-    height: 100%;
+    height: 70px;
+    min-height: 70px;
     gap: 10px;
     justify-content: space-between;
+}
+
+.CrewBoardDetail_Date_SettingBtn>h2{
+    width: 370px;
+    min-width: 370px;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
 }
 
 .CrewBoardDetail_Date_SettingBtn>.CrewBoardDate_ChangeLine{
@@ -315,12 +344,18 @@
     height: 50px;
 }
 
+.CrewBoardDetail_InfoLine>h2{
+    height: 70px;
+    min-height: 70px;
+}
+
 .CrewBoardDetail_InfoLine>.CrewBoardDetail_AddressLine{
     display: none;
     flex-direction: column;
     justify-content: center;
     width: 420px;
-    height: 100%;
+    height: 70px;
+    min-height: 70px;
     gap: 5px;
     h3{
         margin: 0;
@@ -657,7 +692,9 @@
                             /* 댓글 작성자 등급 */
                             .WriterLevel{
                                 width: 100px;
+                                min-width: 100px;
                                 height: 40px;
+                                min-height: 40px;
                                 border: 2px solid orange;
                                 border-radius: 10px;
                                 box-sizing: border-box;
@@ -871,4 +908,19 @@
     .CrewBoardDetail_TopLine>.CrewBoardDetail_Title{
         display: none;
     }
+}
+
+@media(max-width:900px){
+    .CrewBoardDetail_Info>.CrewBoardDetail_InfoLine{
+        flex-direction: column;
+    }
+    
+    .CrewBoardDetail_Writer>.CrewBoardDetail_SettingBtnLine{
+        display: flex;
+    }
+
+    .CrewBoardDetail_Date_SettingBtn>.CrewBoardDetail_SettingBtnLine{
+        display: none;
+    }
+
 }
