2024. 11. 19. 🚧코드 테스트 중
크루보드디테일 페이지 CSS 코드 수정

--- a/src/RidingAnywhere-client/css/crewBoardDetail.css
+++ b/src/RidingAnywhere-client/css/crewBoardDetail.css
@@ -292,12 +292,13 @@
 }
 
 .CrewBoardDetail_SettingBtnLine>input{
+    display: none;
     width: 40px;
     height: 40px;
     background-size: cover;
     border: 0px;
     background-color: rgba(0, 0, 0, 0);
-    color: rgba(0, 0, 0, 0);
+    font-size: 0;
     cursor: pointer;
 }
 
