--- a/src/RidingAnywhere-client/css/crewBoardDetail.css
+++ b/src/RidingAnywhere-client/css/crewBoardDetail.css
@@ -178,6 +178,7 @@
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
+    gap: 10px;
 }
 
 /* 크루 게시글 작성자 */
@@ -319,6 +320,7 @@
 
 .CrewBoardDetail_InfoLine>.CrewBoardDetail_TitleSettingLine{
     display: flex;
+    width: 50%;
     gap: 10px;
     align-items: center;
     justify-content: center;
@@ -331,7 +333,8 @@
     border-radius: 10px;
     box-sizing: border-box;
     height: 60px;
-    width: 400px;
+    width: 100%;
+
     font-size: medium;
     font-weight: bolder;
 }
@@ -353,15 +356,17 @@
 }
 
 .CrewBoardDetail_InfoLine>h2{
+    width: 100%;
     height: 70px;
     min-height: 70px;
+    align-items: center;
 }
 
 .CrewBoardDetail_InfoLine>.CrewBoardDetail_AddressLine{
     display: none;
     flex-direction: column;
     justify-content: center;
-    width: 420px;
+    width: 50%;
     height: 70px;
     min-height: 70px;
     gap: 5px;
@@ -921,15 +926,19 @@
 @media(max-width:900px){
     .CrewBoardDetail_Info>.CrewBoardDetail_InfoLine{
         flex-direction: column;
+        align-items: flex-start;
+        gap: 0;
+    }
+    
+    .CrewBoardDetail_InfoLine>*{
+        width: 100%;
     }
 
     .CrewBoardDetail_InfoLine>.CrewBoardDetail_First{
-        width: 100%;
         justify-content: space-between;
     }
 
     .CrewBoardDetail_InfoLine>.CrewBoardDetail_Second{
-        width: 100%;
         justify-content: flex-end;
     }
     
