--- a/src/RidingAnywhere-client/css/crewBoardDetail.css
+++ b/src/RidingAnywhere-client/css/crewBoardDetail.css
@@ -357,8 +357,8 @@
 
 .CrewBoardDetail_InfoLine>h2{
     width: 100%;
-    height: 70px;
-    min-height: 70px;
+    height: 60px;
+    min-height: 60px;
     align-items: center;
 }
 
@@ -400,6 +400,7 @@
 .CrewBoardDetail_AddressLine>.CrewBoardDetail_AddressInputBox{
     width: 400px;
     min-width: 400px;
+    box-sizing: border-box;
 }
 
 
@@ -929,17 +930,15 @@
         align-items: flex-start;
         gap: 0;
     }
-    
-    .CrewBoardDetail_InfoLine>*{
-        width: 100%;
-    }
 
     .CrewBoardDetail_InfoLine>.CrewBoardDetail_First{
         justify-content: space-between;
+        width: 100%;
     }
 
     .CrewBoardDetail_InfoLine>.CrewBoardDetail_Second{
         justify-content: flex-end;
+        width: 100%;
     }
     
     .CrewBoardDetail_First>.CrewBoardDetail_SettingBtnLine{
@@ -948,6 +947,18 @@
 
     .CrewBoardDetail_Second>.CrewBoardDetail_SettingBtnLine{
         display: none;
+    }
+
+    .CrewBoardDetail_InfoLine>.CrewBoardDetail_TitleSettingLine{
+        width: 100%;
+    }
+
+    .CrewBoardDetail_InfoLine>.CrewBoardDetail_AddressLine{
+        width: 100%;
+    }
+
+    .CrewBoardDetail_AddressLine>.CrewBoardDetail_AddressInputBox{
+        width: 100%;
     }
 
 }
